width auto height auto images

--- a/style.css
+++ b/style.css
@@ -352,6 +352,11 @@ header,
   color: black;
 }
 
+.images_icone_nouveau img {
+  width: auto;
+  height: auto;
+}
+
 .logo_fonctionnement {
   margin-right: 2rem;
   margin-left: 2rem;
