--- a/style.scss
+++ b/style.scss
@@ -279,6 +279,16 @@ header,
 
 // icone FIN
 
+// images DEBUT
+.images_icone_nouveau img {
+	width: auto;
+	height: auto;
+
+}
+// images FIN
+
+
+
 .logo_fonctionnement {
 	margin-right: 2rem;
 	margin-left: 2rem;
