--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @font-face {
   font-family: Roboto;
-  src: url("fonts/Roboto-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: Shrikhand;
-  src: url("fonts/Shrikhand-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
